# Multi-ClientServer

./: CMakeLists.txt  README.md  compile.sh
include/: Clock.h  GetLocalAddress.h  GetLocalPortNumber.h  Manager.h  MyClient.h  MyProcessor.h  MyServer.h  MyThread.h  ProcessSingleClient.h
src/client/: Clock.cpp  MainClient.cpp  MyClient.cpp
src/demo/: CMakeLists.txt
src/demo/demoClient/: demoClient.cpp
src/demo/demoServer/: demoServer.cpp
src/lib/: CMakeLists.txt
src/lib/myClient/: MyClient.cpp
src/lib/myServer/: GetLocalAddress.cpp  MyProcessor.cpp  MyServer.cpp  MyThread.cpp  ProcessSingleClient.cpp
src/server/: GetLocalAddress.cpp  MainServer.cpp  MyProcessor.cpp  MyServer.cpp  MyThread.cpp  ProcessSingleClient.cpp
